syntax = "proto3";

package protos;

option go_package = "go/service1;grpc_server1";

// --------------------------------------------------------

service AuthRPC {
    rpc LoginUser (DataLogin) returns (ResponseLogin) {}
    rpc RegisterUser (DataRegister) returns (ResponseRegister) {}
    rpc SelectSessionUserById(DataSession) returns (ResponseSession) {}
}

// request param
message DataLogin {
    string email = 1;
    string password = 2;
    bool remember_me = 3;
}

message DataRegister {
    string user_email = 1;
    string user_name = 2;
    string user_password = 3;
}

message DataSession {
    string id = 1;
}

// response
message ResponseLogin {
    int32 status = 1;
    string message = 2;
    string user_id = 3;
    string session =  4;
}

message ResponseRegister {
    int32 status = 1;
    string message = 2;
}

message ResponseSession {
    string user_session = 1;
    bool remember_me = 2;
}